This is a summary of the changes in KTIGCC since the first alpha release:

CVS HEAD (2007-07-31):

* Added a full changelog (generated from CVS logs).
* Fixed stray indentation at the end of the line when autoclosing a curly brace
  as ENTER is pressed.
* Ported to KDE 3.92.0.
* Fixed highlighting update when moving a file to Header Files from another
  editable category. (The first character was read from the wrong buffer.)
* Fixed extra newline incorrectly added each time a file is saved.
* Don't hardcode ~/.kde for the KDE(4)HOME directory.
* Fixed missing word wrap on the data variable reloc label in Program Options.
* Fixed A68k items in the New menu being shown even when A68k is not installed.
* Don't grab the keyboard globally (stealing key presses from other apps) in the
  Errors&Warnings pane, only override the Ctrl+C and Ctrl+Ins accelerators.
* Fixed adding to the recent file list getting confused by changes to the list
  from other KTIGCC instances.
* Fixed the wrong recent file getting opened when opening triggers save prompt.
* Now using the builtin pucrunch support in the latest ld-tigcc instead of
  ttpack and ttbin2oth. This also adds support for outputting unwrapped binaries
  for compressed files.
* Now using the new ld-tigcc switch --output-data-var to set the data variable
  file name on the computer instead of the old renaming hack.
* Non-ASCII characters in on-calc file names are now passed to ld-tigcc in
  urlencoded form (more portable).
* Ctrl+Return now works for "Open file at cursor" (not just Ctrl+Numpad Enter)
* Now generating smaller syntax highlighting descriptions for mixes of
  case-sensitive and case-insensitive word lists (using new KatePart feature).
* KTIGCC no longer installs into the $TIGCC prefix, instead a regular prefix is
  used. The default is /usr/local. It can be set by setting the $PREFIX
  environment variable or setting it in the qmake command line (e.g.
  qmake-qt4 PREFIX=/usr).


KTIGCC 1.06 (2006-11-25):
