@@ -112,8 +112,8 @@ static bool findSymbolInFileRecursive(const QString &symbol,
   foreach (const QString &headerName, completionInfo.included) {
     QString headerText=mainForm->textForHeader(headerName);
     if (!headerText.isNull()) {
-      if (!findSymbolInFile(symbol,headerText,headerName,mainForm,symbolFile,
-                            symbolLine,systemHeader))
+      if (!findSymbolInFileRecursive(symbol,headerText,headerName,mainForm,
+                                     symbolFile,symbolLine,systemHeader))
         return false;
       if (!symbolFile.isNull()) return true;
     }
@@ -178,7 +178,7 @@ static bool completionEntriesForFileRecursive(const QString &fileText,
   foreach (const QString &headerName, completionInfo.included) {
     QString headerText=mainForm->textForHeader(headerName);
     if (!headerText.isNull())
-      if (!completionEntriesForFile(headerText,headerName,mainForm,result))
+      if (!completionEntriesForFileRecursive(headerText,headerName,mainForm,result))
         return false;
   }
   return true;
