@@ -1,6 +1,6 @@
 This is a summary of the changes in KTIGCC since the first alpha release:
 
-CVS HEAD (2007-07-31):
+CVS HEAD (2007-10-09):
 
 * Added a full changelog (generated from CVS logs).
 * Fixed stray indentation at the end of the line when autoclosing a curly brace
@@ -31,6 +31,8 @@ CVS HEAD (2007-07-31):
   used. The default is /usr/local. It can be set by setting the $PREFIX
   environment variable or setting it in the qmake command line (e.g.
   qmake-qt4 PREFIX=/usr).
+* Fixed infinite loop when parsing user headers including each other for
+  completion information.
 
 
 KTIGCC 1.06 (2006-11-25):
